pxc/tests/test_001_px/constmet10.px
public namespace constmet10;
import core::common -;

pure struct foo {
  public int x;
  public function int n(int y) {
    int oldx = x;
    x = y;
    return oldx;
  }
  public function int m(int y) const {
    pure function int nf(int z) {
      // x = 99; // error: not modifiable
      return z;
    }
    return nf(y);
  }
}

{
  ptr{foo} v = make_ptr(foo(10));
  println(v->m(20));
}
